===========================================================================
2014-02-12

* Created new directory structure for this project.
  - daemon : The "Red Rob" daemon.
  - sys    : Misc system files for RPi target.
  - www    : Webserver, html and applet for daemon remote control.

* Added framework for Redrob Remote Control (RRC) java applet.

* Added instructions for how to build webserver lighttpd.

===========================================================================

===========================================================================
2014-02-02

* R1A09

* Changed definition of buttons on RF-remote control (keyfob).
  Remote control is now held differently after adding TX-antenna.

===========================================================================

===========================================================================
2014-01-26

* R1A08

* Turned on corefiles with unlimited size in startscript 'redrobd.sh'.

* Fixed bug in 'redrobd_thread_utility.cpp', function
  redrobd_thread_finalize_cyclic(). Added check of final thread status.

* Modified check of battery voltage. LED_BAT_LOW is not latched on low
  voltage anymore. LED is turned off if battery voltage reaches above
  low limit again. This is to avoid "false" alarm because of voltage drop
  when running the motors.

* Added new parametern in configuration file 'redrobd.cfg'.
  Controls if full verbose logging shall be used (verbose=false,
  verbose=true). Steer codes are only logged when verbose=true.

===========================================================================

===========================================================================
2014-01-21

* R1A07

* Configuration:
  - Continuous / Non-continuos steering.
  - Daemon started by start script called from /etc/rc.local.

* HW platform updated.
  - Motor regulator L4940V5 (5V) removed and the battery voltage is now
    directly connected to L293D.
  - Installed main power on/off switch.